name:                opengles
version:             0.1.0.0
synopsis:            OpenGL ES 2.0 and 3.0 with EGL 1.4
description:         A simplified OpenGL ES core wrapper library.
                     This library is intended use on mobile, however,
                     also works in OpenGL 4.1/4.3 environment.
license:             PublicDomain
license-file:        LICENSE
author:              undefined
maintainer:          undefined
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:
  include/EGL/egl.h
  include/EGL/eglext.h
  include/EGL/eglplatform.h
  include/KHR/khrplatform.h
stability: experimental
cabal-version:       >= 1.10

library
  default-language: Haskell2010

  exposed-modules:
    Graphics.EGL,
    Graphics.OpenGLES,
    Graphics.OpenGLES.Base,
    Graphics.OpenGLES.Core,
    Graphics.OpenGLES.Utils
  
  other-extensions: ForeignFunctionInterface
  extra-libraries: EGL
  build-depends:
    base >= 4.6 && < 5,
    bytestring >= 0.10 && < 1,
    vect >= 0.4 && < 0.5
  
  include-dirs: include
  
  if os(ios)
    frameworks: OpenGLES
  